--- a/Research_files/Research.css
+++ b/Research_files/Research.css
@@ -125,6 +125,9 @@
     font-weight: 700;
     line-height: 24px;
 }
+.style_External_699_1753 {
+    position: relative;
+}
 .paragraph_style_5 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
@@ -186,6 +189,14 @@
     line-height: 22px;
 }
 .style_5 {
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+}
+.style_6 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -193,24 +204,13 @@
     font-weight: 700;
     line-height: 22px;
 }
-.style_6 {
+.style_7 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
     font-style: italic;
     font-weight: 400;
     line-height: 22px;
-}
-.style_7 {
-    font-family: 'Calibri-BoldItalic', 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 700;
-    line-height: 22px;
-}
-.style_External_699_1731 {
-    position: relative;
 }
 .style_8 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
@@ -219,6 +219,18 @@
     font-style: italic;
     font-weight: 700;
     line-height: 22px;
+}
+.style_9 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 22px;
+}
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
 }
 .paragraph_style_7 {
     color: rgb(66, 66, 66);
@@ -242,11 +254,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_9 {
+.style_10 {
     font-family: 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -254,7 +262,7 @@
     font-weight: 400;
     line-height: 22px;
 }
-.style_10 {
+.style_11 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -262,7 +270,7 @@
     font-weight: 700;
     line-height: 22px;
 }
-.style_11 {
+.style_12 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -270,7 +278,7 @@
     font-weight: 400;
     line-height: 22px;
 }
-.style_12 {
+.style_13 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -300,7 +308,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_13 {
+.style_14 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -434,7 +442,7 @@
 .Normal_External_699_70 {
     position: relative;
 }
-.Normal_External_699_1731 {
+.Normal_External_699_1753 {
     position: relative;
 }
 .graphic_generic_body_textbox_style_default_SkipStroke {
