--- a/Publications_files/Publications.css
+++ b/Publications_files/Publications.css
@@ -185,6 +185,21 @@
     line-height: 19px;
 }
 .style_7 {
+    color: rgb(0, 0, 0);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+    opacity: 1.00;
+}
+.style_8 {
+    color: rgb(0, 0, 0);
+    line-height: 19px;
+    opacity: 1.00;
+}
+.style_9 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -192,7 +207,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_8 {
+.style_10 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -200,7 +215,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_9 {
+.style_11 {
     font-family: 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -208,7 +223,11 @@
     font-weight: 400;
     line-height: 22px;
 }
-.style_10 {
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_12 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -216,7 +235,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_11 {
+.style_13 {
     font-family: 'Calibri';
     font-size: 11px;
     font-stretch: normal;
@@ -225,11 +244,7 @@
     line-height: 19px;
     vertical-align: 5px;
 }
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_12 {
+.style_14 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -237,7 +252,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_13 {
+.style_15 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -245,7 +260,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_14 {
+.style_16 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -297,7 +312,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_15 {
+.style_17 {
     line-height: 19px;
 }
 .paragraph_style_8 {
@@ -322,7 +337,7 @@
     text-indent: -36px;
     text-transform: none;
 }
-.style_16 {
+.style_18 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 11px;
     font-stretch: normal;
@@ -331,7 +346,7 @@
     line-height: 19px;
     vertical-align: 5px;
 }
-.style_17 {
+.style_19 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 11px;
     font-stretch: normal;
@@ -368,7 +383,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_652_1962 {
+.style_External_652_1943 {
     position: relative;
 }
 .Free_Form {
@@ -418,10 +433,10 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_362_76 {
+.Normal_External_652_1943 {
     position: relative;
 }
-.Normal_External_652_1962 {
+.Normal_External_362_76 {
     position: relative;
 }
 .Normal_External_699_70 {
